--- a/src/style.css
+++ b/src/style.css
@@ -67,6 +67,31 @@ main {
   font-size: 27px;
   font-weight: 100;
 }
+.weather-forcast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.weather-forcast-date {
+  text-align: center;
+  color: #385170;
+  opacity: 0.7;
+  font-size: 20px;
+}
+.weather-forcast-icon {
+  text-align: center;
+  font-size: 30px;
+}
+.weather-forcast-temperatures {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 12px;
+  color: palevioletred;
+}
+.weather-forcast-temperature {
+  padding-left: 15px;
+}
 footer {
   border-top: 1px solid #9fd3c7;
   padding: 30px 0 0 0;
